--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -740,14 +740,14 @@
 
           </div> -->
           <div class="col-md-12">
-            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" > <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" ng-show="showProductTable || hasUserClient"  > <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
           </div>
 
           <div class="col-md-12">
   			<!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
         </table> -->
 
-        <table class="table" ng-if="showProductTable || hasUserClient" datatable="ng" dt-options="dtOptions">
+        <table class="table" ng-if="1 == 2 " datatable="ng" dt-options="dtOptions">
           <thead>
               <tr>
               <th scope="col"><p class="text-center">#</p></th>
@@ -791,7 +791,7 @@
           </tbody>
           </table>
 
-          <table class="table" ng-show="client"  datatable="ng" dt-options="dtOptions">
+          <table class="table" ng-show="showProductTable || hasUserClient"  datatable="ng" dt-options="dtOptions">
             <thead>
                 <tr>
                 <th scope="col"><p class="text-center">#</p></th>
