--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -62,8 +62,8 @@
               <!-- INFO CLIENTE -->
               <header-client></header-client>
               <!--  END INFO CLIENTE -->
-              <!-- <div ng-show="!hasUserClient">
-                <div class="row">
+              <div ng-show="!hasUserClient">
+                <!-- <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-6">
                     <label for="clientes">Busqueda por cliente</label>
                     <div class="input-group mb-3">
