--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -740,7 +740,7 @@
 
           </div> -->
           <div class="col-md-12">
-            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" ng-show="(showProductTable || hasUserClient) && clienteValido"  > <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" ng-disabled="!clienteValido" ng-show="showProductTable || hasUserClient"  > <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
           </div>
 
           <div class="col-md-12">
