--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -81,6 +81,32 @@
     <h5 class="text-center"> <strong>Pedidos Facturados</strong> </h5>
       <br>
 <header-client></header-client>
+
+<div ng-show="!hasUserClient">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <label for="clientes">Busqueda por cliente</label>
+      <div class="input-group mb-3">
+        <input type="text" id="clientes" class="form-control" ng-model="nombre_cliente" placeholder="Busqueda por Cliente" aria-label="Busqueda por Cliente" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-6" ng-show="clientes.length > 0" >
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Seleccione</label>
+        <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-change="selectCLient()">
+          <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
+          <option value="" disabled selected>Seleccione un cliente</option>
+        </select>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
       <div class="row">
         <div class="col-md-12">
       <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
