--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -117,7 +117,7 @@
             <thead>
                 <tr>
                   <th scope="col"><p class="text-center">#</p></th>
-                  <th scope="col"><p class="text-center">N Pedido</p></th>
+                  <th scope="col"><p class="text-center">N° Pedido</p></th>
                   <th scope="col"><p class="text-center">Fecha factura</p></th>
                   <th scope="col"><p class="text-center">Fecha pedido</p></th>
                   <th scope="col"><p class="text-center">Nombre vendedor</p></th>
