--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -141,6 +141,11 @@
 
               </div>
 
+              <div class="row mt-3 mb-5">
+
+              </div>
+
+
               <div class="form-group" >
                 <table class="table">
                     <thead>
@@ -161,22 +166,21 @@
                     <tbody>
 
                         <tr ng-repeat="x in pedido.pedido" ng-class="{ incideRow : x.alert }" >
-                            <!-- <th scope="row">{{ $index + 1 }}</th> -->
-                            <!-- <td><p class="text-center">{{ x.COD_PRODUCTO }}</p></td> -->
                             <td><p class="text-center">{{ x.nombre_producto }}</p></td>
-                            <td><p class="text-center">{{ x.CANTIDAD }}</p></td>
+                            <td>
+                              <p ng-if="editRowIndex != $index" class="text-center">{{ x.CANTIDAD }}</p>
+                              <input type="number"  min="1" ng-model="articulo.CANTIDAD" ng-if="editRowIndex == $index" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+                              <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
+                            </td>
                             <td><p class="text-right">{{ formato(2,x.PRECIO) }}</p></td>
                             <td><p class="text-right">{{ formato(2,(x.PRECIO * x.CANTIDAD)) }}</p></td>
                             <td><p class="text-right">{{ formato(3,x.precio_neto_usd) }}</p></td>
                             <td><p class="text-right">{{ formato(3,(x.precio_neto_usd * x.CANTIDAD)) }}</p></td>
                             <!-- <td><p class="text-right"><i ng-show="!x.alert" class="fas fa-1x fa-check"></i><i ng-show="x.alert"  class="fas fa-1x fa-times"></i>  </p></td> -->
                             <td >
-                              <!-- <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);">X</button> -->
-                              <!-- <p class="text-center">
-                                <i class="fa fa-trash" style="cursor: pointer;" ng-click="removeDetalleProducto($index);"></i>
-                              </p>
-                              -->
+
                               <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
+                              <button type="button" class="btn btn-success" ng-click="editRow(x, $index);" ><i class="fa fa-pencil" style="cursor: pointer;" ></i></button>
                             </td>
                           </tr>
                     </tbody>
@@ -660,6 +664,63 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="modalEditDetalle">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Editar producto</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+      </div>
+      <div class="modal-body">
+
+        <div class="container">
+
+          <table class="table" ng-show="editArticulo && existenciaEdit" >
+            <thead>
+              <tr>
+                <th scope="col"><p class="text-center">Nombre Articulo</p></th>
+                <th scope="col"><p class="text-center">Cantidad</p></th>
+                <th scope="col"><p class="text-center">Existencia</p></th>
+                <th scope="col"><p class="text-center">Precio por unidad</p></th>
+                <th scope="col"><p class="text-center">Total</p></th>
+                <th scope="col"><p class="text-center">Precio USD</p></th>
+                <th scope="col"><p class="text-center">Total USD</p></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><p class="text-center">{{ editArticulo.nombre_producto }}</p></td>
+                <td>
+                  <input  type="number"
+                          min="1" max="{{existenciaEdit + cantidadAux}}"
+                          ng-model="editArticulo.CANTIDAD" class="form-control"
+                          placeholder="cantidad"
+                          onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+                </td>
+                <td><p class="text-center">{{ existenciaEdit + cantidadAux }}</p></td>
+                <td><p class="text-right">{{ formato(2,editArticulo.PRECIO) }}</p></td>
+                <td><p class="text-right">{{ formato(2,(editArticulo.PRECIO * editArticulo.CANTIDAD)) }}</p></td>
+                <td><p class="text-right">{{ formato(3,editArticulo.precio_neto_usd) }}</p></td>
+                <td><p class="text-right">{{ formato(3,(editArticulo.precio_neto_usd * x.CANTIDAD)) }}</p></td>
+
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-success" ng-click="updDetalleProductoTable(editArticulo);" data-dismiss="modal" ><i class="fa fa-save" style="cursor: pointer;" ></i>Aceptar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <div id="wrapper" class="active">
 
