--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -406,6 +406,7 @@
                               <td >
 
                                 <button type="button" class="btn btn-danger" ng-disabled="!editView" ng-show="editView"  ng-click="removeDetalleProducto($index);" ><i class="fa fa-trash" style="cursor: pointer;" ></i></button>
+                                <button type="button" class="btn btn-success" ng-disabled="!editView" ng-show="editView" ng-click="editRow(x, $index);" ><i class="fa fa-pencil" style="cursor: pointer;" ></i></button>
                               </td>
                             </tr>
                       </tbody>
