--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -704,7 +704,7 @@
                 <td><p class="text-right">{{ formato(2,editArticulo.PRECIO) }}</p></td>
                 <td><p class="text-right">{{ formato(2,(editArticulo.PRECIO * editArticulo.CANTIDAD)) }}</p></td>
                 <td><p class="text-right">{{ formato(3,editArticulo.precio_neto_usd) }}</p></td>
-                <td><p class="text-right">{{ formato(3,(editArticulo.precio_neto_usd * x.CANTIDAD)) }}</p></td>
+                <td><p class="text-right">{{ formato(3,(editArticulo.precio_neto_usd * editArticulo.CANTIDAD)) }}</p></td>
 
               </tr>
             </tbody>
