--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -678,7 +678,7 @@
 
         <div class="container">
 
-          <table class="table" ng-show="editArticulo && existenciaEdit" >
+          <table class="table" ng-show="editArticulo && existenciaEdit != null" >
             <thead>
               <tr>
                 <th scope="col"><p class="text-center">Nombre Articulo</p></th>
