--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -510,7 +510,7 @@
 
               <div ng-if="showProductTable" >
 
-                <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
+                <table datatable="ng" dt-options="dtOptionsProd"  class="table table-sm" >
                   <thead>
                       <tr>
                       <th scope="col"><p class="text-center">#</p></th>
