--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -469,7 +469,7 @@
 </div>
 
 <div class="modal fade" id="modalproduct">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog mw-100 modal-90">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">Productos</h4>
