--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -477,7 +477,7 @@
 
       </div>
       <div class="modal-body">
-        <div class="container">
+        <div class="">
 
           <div class="card" tabindex="0">
             <span class="card__infoicon">
@@ -497,7 +497,7 @@
 
         <div class="modal-body-he">
           <button id="btnProductInfo" style="display:none" data-toggle="modal" data-target="#modalInfoProduct"></button>
-          <div class="container">
+          <div class="">
 
             <div class="col-sm-12 col-md-12 col-lg-12">
               <label for="clientes">Busqueda por producto</label>
