--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -18,7 +18,7 @@
           <header-client></header-client>
         <!--  END INFO CLIENTE -->
 
-  <div class="container">
+  <div class="">
 
     <div ng-show="!hasUserClient">
       <div class="row">
