--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -844,7 +844,7 @@
                 <th scope="col"><p class="text-center">N pedido</p></th>
                 <th scope="col"><p class="text-center">Fecha creacion</p></th>
                 <th  ng-show="!hasUserClient" scope="col"><p class="text-center">Nombre Cliente</p></th>
-                <th scope="col"><p class="text-center">Direcion</p></th>
+                <!-- <th scope="col"><p class="text-center">Direcion</p></th> -->
                 <th scope="col"><p class="text-center">Estatus</p></th>
                 <th scope="col"><p class="text-center">Fecha actualizado</p></th>
                 <th scope="col"><p class="text-center">Opciones</p></th>
@@ -854,10 +854,10 @@
 
                 <tr ng-repeat="x in listaPedidosV2">
                     <th scope="row">{{ $index + 1 }}</th>
-                    <td><p class="text-center">ORD-{{ x.ID }}-WEB</p></td> 
+                    <td><p class="text-center">ORD-{{ x.ID }}-WEB</p></td>
                     <td><p class="text-center">{{  x.fecha_creacion }}</p></td>
                     <td ng-show="!hasUserClient" ><p class="text-center">{{ x.nombre_cliente }}</p></td>
-                    <td><p class="text-center">{{ x.direccion_cliente }}</p></td>
+                    <!-- <td><p class="text-center">{{ x.direccion_cliente }}</p></td> -->
                     <td><p class="text-center">{{ x.estatus }}</p></td>
                     <td><p class="text-center">{{ x.fecha_estatus }}</p></td>
                     <td>
