--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -7,7 +7,7 @@
   <div class="row pb-2 p-2" >
       <div class="col-md-6">
           <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-          <p class="mb-1" style="text-transform: capitalize;"> <span class="text-muted">Razon Social: </span>{{client_info.nombre_cliente.toLowerCase()}}</p>
+          <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client_info.nombre_cliente.toLowerCase()}}</p>
           <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client_info.docu_identif_cliente}}</p>
           <p class="mb-1"><span class="text-muted">Telefono: </span>{{client_info.telefono1}}</p>
           <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client_info.direccion_cliente.toLowerCase()}}</p>
