--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -242,7 +242,6 @@
   </div>
 </div>
 
-
 <!-- Modal -->
 <div class="modal fade" id="showPedidoModal" tabindex="-1" role="dialog" aria-labelledby="showPedidoModalLabel" aria-hidden="true">
   <div class="modal-dialog  mw-100 modal-90" role="document">
@@ -478,7 +477,7 @@
       </div>
       <div class="modal-body">
         <div class="">
-
+        <h5 class="">Requisitos para solicitud de psicotr&oacute;picos</h5>
           <div class="card" tabindex="0">
             <span class="card__infoicon">
               <i class="fa fa-info"></i>
