--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -476,8 +476,8 @@
 
       </div>
       <div class="modal-body">
-        <div class="">
-          <span id="card__infoicon">
+        <div id="card__infoicon">
+          <span>
             <h5 class=""><i class="fa fa-info"></i>Requisitos para solicitud de psicotr&oacute;picos</h5>
           </span>
 
