--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -478,7 +478,7 @@
       <div class="modal-body">
         <div id="card__infoicon">
           <span>
-            <a class="nav-link" ng-click="infoPsico = true" ><i class="fa fa-info"></i> <p>Requisitos para solicitud de psicotr&oacute;picos</p></a>
+            <a class="nav-link" ng-click="infoPsico = true" ><i class="fa fa-info"> <p>Requisitos para solicitud de psicotr&oacute;picos</p> </i></a>
           </span>
 
           <div class="alert alert-info alert-dismissible fade show" ng-show="infoPsico" role="alert">
@@ -491,7 +491,7 @@
   <p style='font-style: normal; font-weight: 400; text-align: start; text-indent: 0px;  margin: 0cm 0cm 0.0001pt 8px; font-size: 16px; font-family: "Times New Roman", serif; color: rgb(34, 34, 34);'><span style=" rgb(209, 236, 241);"><span style="color: rgb(0, 0, 0);"><span style="font-size: 13px; font-family: Symbol;">&middot;<span style='font-size:9px;line-height: normal;font-family: "Times New Roman";'>&nbsp; &nbsp; &nbsp; &nbsp;</span></span><strong><span style="font-size: 13px; font-family: Arial, sans-serif;"><a target="_self" href="/ddo/app/assets/planilla.doc" download="planilla.doc">Planilla de solicitud </a> de productos psicotr&oacute;picos firmada por el regente y sellada por la farmacia, con fecha actual, es exigido por Sanidad (ver anexo).</span></strong></span></span></p>
   <p style='font-style: normal; font-weight: 400; text-align: start; text-indent: 0px;  margin: 0cm 0cm 0.0001pt 8px; font-size: 16px; font-family: "Times New Roman", serif; color: rgb(34, 34, 34);'><span style=" rgb(209, 236, 241);"><span style="color: rgb(0, 0, 0);"><span style="font-size: 13px; font-family: Symbol;">&middot;<span style='font-size:9px;line-height: normal;font-family: "Times New Roman";'>&nbsp; &nbsp; &nbsp; &nbsp;</span></span></span></span><strong><span style="font-size: 13px; font-family: Arial, sans-serif; color: rgb(0, 0, 0);  rgb(209, 236, 241);">Todos los documentos deben ser enviados en un mismo correo</span></strong></p>
             </div>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="infoPsico = false" >
+            <button type="button" class="close"  ng-click="infoPsico = false" >
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
