--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -101,7 +101,7 @@
 
 
                 <div class="form-group">
-                  <label for="comment">Observacion:</label>
+                  <label for="comment">Observacion del pedido</label>
                   <textarea class="form-control" ng-model="pedido.observacion" rows="2" id="comment"></textarea>
                 </div>
               </div>
@@ -338,7 +338,7 @@
 
 
                 <div class="form-group">
-                  <label for="comment">Observacion:</label>
+                  <label for="comment">Observacion del pedido</label>
                   <textarea class="form-control" ng-disabled="!editView" ng-model="pedido.observacion" rows="2" id="comment"></textarea>
                 </div>
               </div>
