--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -17,7 +17,7 @@
           <p class="font-weight-bold mb-4">Detalles</p>
           <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
           <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p>
-          <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">per. crédito y cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
+          <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">contacto crédito y cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
           <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client_info.v_plazo}} dias</p>
       </div>
   </div>
