--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -64,20 +64,20 @@
               <!--  END INFO CLIENTE -->
               <div ng-show="!hasUserClient">
 
-                <div class="row pb-2 p-2" ng-if="clientIndex != -1">
+                <div class="row pb-2 p-2" ng-if="clientIndex != -1" >
                     <div class="col-md-6">
                         <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-                        <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
-                        <p>{{client.telefono1}}</p>
-                        <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
+                        <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente.toLowerCase()}}</p>
+                        <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
+                        <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p>
+                        <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client.direccion_cliente.toLowerCase()}}</p>
                     </div>
 
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-6">
                         <p class="font-weight-bold mb-4">Detalles</p>
-                        <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                         <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
                         <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
-                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">persona contacto área crédito y cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
+                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">contacto crédito y cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
                         <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client.v_plazo}} dias</p>
                     </div>
                 </div>
@@ -300,20 +300,20 @@
             <header-client></header-client>
             <div ng-show="!hasUserClient">
 
-
-              <div class="row pb-2 p-2" >
+              <div class="row pb-2 p-2"  >
                   <div class="col-md-6">
                       <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-                      <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
-                      <p>{{client.telefono1}}</p>
-                      <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
+                      <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente.toLowerCase()}}</p>
+                      <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
+                      <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p>
+                      <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client.direccion_cliente.toLowerCase()}}</p>
                   </div>
 
-                  <div class="col-md-6 text-right">
+                  <div class="col-md-6">
                       <p class="font-weight-bold mb-4">Detalles</p>
-                      <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                       <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
                       <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
+                      <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">contacto crédito y cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
                       <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client.v_plazo}} dias</p>
                   </div>
               </div>
