--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -67,7 +67,7 @@
                 <div class="row pb-2 p-2" ng-if="clientIndex != -1" >
                     <div class="col-md-6">
                         <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-                        <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente.toLowerCase()}}</p>
+                        <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
                         <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                         <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p>
                         <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client.direccion_cliente.toLowerCase()}}</p>
@@ -303,7 +303,7 @@
               <div class="row pb-2 p-2"  >
                   <div class="col-md-6">
                       <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-                      <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente.toLowerCase()}}</p>
+                      <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
                       <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                       <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p>
                       <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client.direccion_cliente.toLowerCase()}}</p>
@@ -769,7 +769,7 @@
           <div class="row pb-2 p-2" ng-if="clientIndex != null">
             <div class="col-md-6">
                 <p class="font-weight-bold mb-4">Informacion del Cliente </p>
-                <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente.toLowerCase()}}</p>
+                <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
                 <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                 <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p>
                 <p class="mb-1"> <span class="text-muted">Direccion: </span> {{client.direccion_cliente.toLowerCase()}}</p>
